--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 40px;
-    font-family: "Open Sans", Arial, Helvetica, Sans-serif;
+    /* font-family: "Open Sans", Arial, Helvetica, Sans-serif; */
+    font-family: monospace;
+    font-size: 4em;
 }
 
 .wrapper {
@@ -17,4 +19,10 @@ body {
     padding: 20px;
     font-size: 100%;
     margin: 5px;
+}
+
+@media screen and (min-width: 1000px) {
+    body {
+        font-size: 1em; /* 6vmin; */
+    }
 }
