--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     margin: 40px;
     /* font-family: "Open Sans", Arial, Helvetica, Sans-serif; */
     font-family: monospace;
-    font-size: 3em;
+    font-size: 6vmin;
 }
 
 .wrapper {
