--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .box {
-    background-color: #ccc;
+    background-color: #f5f5f5;
     color: #000;
     border-radius: 5px;
     padding: 20px;
